--- a/GasWaage/app/src/main/res/values/strings.xml
+++ b/GasWaage/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">GasWaage</string>
     <string name="startScanning">Start Scanning</string>
     <string name="cancelScanning">Cancel Scanning</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pairing_request">tmp</string>
 </resources>
