--- a/GasWaage/app/src/main/res/values/strings.xml
+++ b/GasWaage/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="pairing_request">tmp</string>
+    <string name="settings">Settings</string>
+    <string name="calibrate">Calibrate</string>
 </resources>
